# ReadyCheck

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_OLD.md  Cargo.toml  README.md
query_engine/: Cargo.toml
query_engine/src/: lib.rs
query_engine/src/atf/v2/: detail.rs  index.rs
query_engine/src/server/: connection.rs  errors.rs  handler.rs  mod.rs  rate_limit.rs  server.rs  types.rs
query_engine/tests/: json_rpc_server_coverage_tests.rs  json_rpc_server_tests.rs  test_query_engine.py
tracer_backend/src/atf/: CMakeLists.txt  atf_detail_writer.c  atf_detail_writer_private.h  atf_index_writer.c  atf_index_writer_private.h  atf_thread_writer.c  atf_v4_writer.c  thread_counters.c  thread_counters_private.h
tracer_backend/src/atf/proto/: trace_schema.proto
tracer_backend/tests/: CMakeLists.txt  ada_paths.h.in  bench_e2e_overhead.rs  cpp_tests.rs  test_main.cpp  tests.rs
tracer_backend/tests/bench/: bench_baseline_hooks.c
tracer_backend/tests/bench/agent/: CMakeLists.txt
tracer_backend/tests/bench/controller/: CMakeLists.txt
tracer_backend/tests/bench/e2e/: CMakeLists.txt
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/c/app/BenchWorkloadCApp/: main.m  workload.c  workload.h
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/c/app/BenchWorkloadCApp.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/c/cli/BenchWorkloadC/: main.c
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/c/cli/BenchWorkloadC.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/cpp/app/BenchWorkloadCppApp/: workload.cpp  workload.h
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/cpp/app/BenchWorkloadCppApp.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/cpp/cli/BenchWorkloadCpp/: main.cpp
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/cpp/cli/BenchWorkloadCpp.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/objc/app/BenchWorkloadObjcApp/: main.m
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/objc/app/BenchWorkloadObjcApp.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/objc/cli/BenchWorkloadObjc/: main.m
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/objc/cli/BenchWorkloadObjc.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/e2e/fixtures/macos/xcode/swift/app/BenchWorkloadSwiftApp.xcodeproj/: project.pbxproj
tracer_backend/tests/bench/utils/: CMakeLists.txt
tracer_backend/tests/fixtures/: test_swift_runloop.swift  test_swift_server_mock.swift  test_swift_simple.swift  test_swiftui_app.swift
tracer_backend/tests/fixtures/TestSwiftUIApp/TestSwiftUIApp/: Info.plist  TestSwiftUIAppApp.swift
tracer_backend/tests/fixtures/TestSwiftUIApp/TestSwiftUIApp.xcodeproj/: project.pbxproj
tracer_backend/tests/fixtures/debug_stub_app/: .gitignore  build_fixture.sh
tracer_backend/tests/fixtures/debug_stub_app/DebugStubApp/: ContentView.swift  DebugStubAppApp.swift
tracer_backend/tests/fixtures/debug_stub_app/DebugStubApp.xcodeproj/: project.pbxproj
tracer_backend/tests/integration/: test_agent_loader.cpp  test_baseline_hooks.cpp  test_controller_full_lifecycle.c  test_controller_full_lifecycle.cpp  test_integration.c  test_integration.cpp  test_thread_registry_integration.cpp
tracer_backend/tests/integration/agent/: CMakeLists.txt  test_agent_registry_modes.cpp  test_debug_dylib_detection.cpp  test_swift_filter_invariants.cpp  test_swift_hooks.cpp
tracer_backend/tests/integration/atf/: CMakeLists.txt  test_atf_v2_writer.cpp
tracer_backend/tests/integration/bench/: bench_common.sh  run_bench_tests.sh
tracer_backend/tests/integration/bench/macos/xcode/c/: test_app_debug.sh  test_app_debug_dylib.sh  test_app_release.sh  test_cli_export_sym.sh  test_cli_no_export_sym.sh
tracer_backend/tests/integration/bench/macos/xcode/cpp/: test_app_debug.sh  test_app_debug_dylib.sh  test_app_release.sh  test_cli_export_sym.sh  test_cli_no_export_sym.sh
tracer_backend/tests/integration/bench/macos/xcode/objc/: test_app_debug.sh  test_app_debug_dylib.sh  test_app_release.sh  test_cli_export_sym.sh  test_cli_no_export_sym.sh
tracer_backend/tests/integration/bench/macos/xcode/swift/: test_app_debug.sh  test_app_debug_dylib.sh  test_app_release.sh  test_cli_export_sym.sh  test_cli_no_export_sym.sh
tracer_backend/tests/integration/controller/: CMakeLists.txt  test_integration.cpp
tracer_backend/tests/integration/examples/: test_examples_integration.cpp
tracer_backend/tests/integration/metrics/: CMakeLists.txt  test_metrics_integration.cpp
tracer_backend/tests/integration/system/: test_system_pipeline.cpp
tracer_backend/tests/integration/utils/: CMakeLists.txt  test_thread_registry_integration.cpp
tracer_backend/tests/unit/: test_registry_migration.cpp  test_ring_buffer.c  test_ring_buffer.cpp  test_ring_buffer_attach.c  test_ring_buffer_attach.cpp  test_shared_memory.c  test_shared_memory.cpp  test_spawn_method.c  test_spawn_method.cpp  test_thread_registry.cpp  test_thread_registry_cpp.cpp
tracer_backend/tests/unit/agent/: CMakeLists.txt  test_comprehensive_hooks.cpp  test_debug_dylib_detection.cpp  test_dso_management.cpp  test_exclude_list.cpp  test_hook_registry.cpp  test_index_event_layout.cpp  test_swift_detection.cpp
tracer_backend/tests/unit/atf/: CMakeLists.txt  test_atf_v2_error_handling.cpp  test_atf_v2_layout.cpp  test_atf_v2_linking.cpp
tracer_backend/tests/unit/atf_v4/: atf_v4_writer_test_helpers.h  test_atf_v4_writer.cpp
tracer_backend/tests/unit/controller/: CMakeLists.txt
tracer_backend/tests/unit/drain_thread/: CMakeLists.txt  test_drain_metrics.cpp
tracer_backend/tests/unit/metrics/: CMakeLists.txt  test_coverage_gaps.cpp  test_thread_metrics.cpp
tracer_backend/tests/unit/utils/: CMakeLists.txt  test_offsets_materialization.cpp  test_ring_buffer.cpp  test_ring_buffer_attach.cpp  test_shared_memory.cpp  test_shm_directory.cpp  test_thread_registry.cpp  test_thread_registry_accessors.cpp  test_thread_registry_cpp.cpp  test_thread_registry_fallback.cpp
(+330 files in other folders)
