# ===========================================
# Utils Benchmark Tests
# ===========================================

# Add benchmark tests here as needed
# Example structure for future benchmarks:
# add_executable(bench_ring_buffer
#     bench_ring_buffer.cpp
# )
# target_link_libraries(bench_ring_buffer
#     PRIVATE
#         benchmark::benchmark
#         tracer_utils
#         Threads::Threads
# )